--- a/emqx-app-hooks.yaml
+++ b/emqx-app-hooks.yaml
@@ -14,6 +14,6 @@ spec:
           command:
             - "/bin/bash"
             - "-c"
-            - "kubectl get configmap/nginx-ingress-tcp-microk8s-conf -oyaml -n ingress | yq e '.data.1883 = \"mqtt/emqx:1883\"' - | kubectl apply -f -"
+            - "kubectl get configmap/nginx-ingress-tcp-microk8s-conf -oyaml -n ingress | yq e '.data.1883 = \"mqtt/emqx:1883\"' - | kubectl apply -f - && kubectl get daemonset/nginx-ingress-microk8s-controller -oyaml -n ingress | yq e '.spec.template.spec.containers[].ports += [{\"containerPort\":1883,\"hostPort\":1883,\"name\":\"mqtt\",\"protocol\":\"TCP\"}]' - | kubectl apply -f -"
       restartPolicy: Never
   backoffLimit: 2
