--- a/emqx-app-hooks.yaml
+++ b/emqx-app-hooks.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
         - name: ingress-config
-          image: registry.kube.sysvr.site/public/argohook
+          image: docker://registry.kube.sysvr.site/public/argohook
           command:
             - "/bin/bash"
             - "-c"
